--- a/stock-project/app/views/users/new.html.erb
+++ b/stock-project/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Sign up</h1>
 
   <%= form_for @user do |f| %>
-  <%= f.text_field :username, placeholder: "Desired Username" %>
+  <%= f.text_field :username, placeholder: "Desired username" %>
   <br/>
   <%= f.text_field :email, placeholder: "email" %>
   <br/>
