--- a/stock-project/app/views/stocks/index.html.erb
+++ b/stock-project/app/views/stocks/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Stocks</h2>
 
-<form id='new-stock form'>
+<form id='new-stock-form'>
 	Ticker: <input type="text" name="ticker">
 	<br>
 	Name: <input type="text" name="name">
