--- a/stock-project/app/views/users/home.html.erb
+++ b/stock-project/app/views/users/home.html.erb
@@ -1,1 +1,6 @@
 Hello <%= @user.username %> Welcome to your HomePage
+
+<form action="/stocks" method="POST">
+	<input type="text" name="ticker"></input>
+	<input type="submit">
+</form>
