--- a/stock-project/app/views/users/home.html.erb
+++ b/stock-project/app/views/users/home.html.erb
@@ -1,10 +1,13 @@
 Hello <%= @user.username %> Welcome to your HomePage
 
-<<<<<<< HEAD
-<form action="/stocks" method="POST">
+
+<!-- <form action="/stocks" method="POST">
+	<input type="text" name="stock"></input>
+	<input type="submit">
+</form> -->
+
+<%= form_tag "/stocks", method: "POST" do %>
 	<input type="text" name="ticker"></input>
 	<input type="submit">
-</form>
-=======
+<% end %>
 <ul class='stocks'></ul>
->>>>>>> b59773e38e9bb427f56a496548c2987aba901610
