--- a/stock-project/app/views/stocks/show.html.erb
+++ b/stock-project/app/views/stocks/show.html.erb
@@ -7,6 +7,8 @@
   <li>Avg Volume: <%= number_with_delimiter(@stock.average_daily_volume, :delimiter => ',') %></li>
 </ul>
 
+    </br>
+    <input type="button" value="Save to Favorites">
 <table>
   <% @tweets.each do |tweet| %>
     <tr>
@@ -15,4 +17,5 @@
     </br>
     </tr>
   <% end %>
+
 </table>
