--- a/stock-project/app/views/users/home.html.erb
+++ b/stock-project/app/views/users/home.html.erb
@@ -1,5 +1,5 @@
 <h1>
-Hello <%= @user.username %> Welcome to your HomePage
+Welcome to your HomePage
 </h1>
 
 <!-- <form action="/stocks" method="POST">
