--- a/stock-project/app/assets/stylesheets/application.scss
+++ b/stock-project/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  $logo: white;
  *, *:before, *:after { box-sizing: border-box; }
 
- * {
+*{
   margin: 0;
   border: 0;
   padding: 0;
@@ -139,4 +139,25 @@ input[type='submit']{
       margin-top: 0.5em;
     }
   }
+}
+
+.stockinfo{
+	list-style-type: none;
+	margin-left: 2em;
+	color:green;
+}
+
+.favorite{	
+	width:1em;
+	height: 1em;
+	border-radius: 100%;
+	border: 2px solid black;
+	display: inline-block;
+	margin-bottom: -5px;
+}
+
+.word{
+	margin-bottom: -10px;
+	font-size: .75em;
+	padding-top: .5em;
 }
