--- a/stock-project/app/assets/stylesheets/application.scss
+++ b/stock-project/app/assets/stylesheets/application.scss
@@ -146,7 +146,9 @@ input[type='submit']{
 	margin-left: 2em;
 	color:green;
 }
-
+.favorited{
+	background-color: yellow;
+}
 .favorite{	
 	width:1em;
 	height: 1em;
