adding favorite stocks functionality

--- a/stock-project/app/views/stocks/show.html.erb
+++ b/stock-project/app/views/stocks/show.html.erb
@@ -6,16 +6,17 @@
   <li>Volume: <%= number_with_delimiter(@stock.volume, :delimiter => ',') %></li>
   <li>Avg Volume: <%= number_with_delimiter(@stock.average_daily_volume, :delimiter => ',') %></li>
 </ul>
+  </br>
+  <%= link_to "Save to Favorites", "/stocks/#{@stock.ticker}/favorite", method: :post %>
+  <%= link_to "Remove from Favorites", "/stocks/#{@stock.ticker}/favorite", method: :delete %>
+  </br>
 
-    </br>
-    <input type="button" value="Save to Favorites">
 <table>
   <% @tweets.each do |tweet| %>
     <tr>
       <td><%= tweet.tweet_sender %></td>
       <td><%= tweet.tweet_text %></td>
-    </br>
     </tr>
   <% end %>
-
 </table>
+    </br>
