--- a/stock-project/app/views/stocks/show.html.erb
+++ b/stock-project/app/views/stocks/show.html.erb
@@ -24,3 +24,12 @@
   <% end %>
 </table>
 </br>
+
+<p>
+  <ul class="tweet_cloud">
+    <% @cloud.each do |word, size| %>
+        <li display="inline"><%= word %></li>
+        <% puts word %>
+    <% end %>
+  </ul>
+</p>
