--- a/stock-project/app/assets/stylesheets/application.scss
+++ b/stock-project/app/assets/stylesheets/application.scss
@@ -164,16 +164,14 @@ input[type='submit']{
 
 .stockinfo{
   position: fixed;
-  margin-top: 2em;
   list-style-type: none;
-  margin-left: 2em;
   color:$primary;
   background: lightgrey;
   height: 100%;
   width:15%;
   margin: 0;
   text-align: center;
-  margin-top: 5%;
+  top: 11.5%;
   padding-top: 6em;
   li{
     padding-bottom: 1.5em;
