--- a/stock-project/app/assets/stylesheets/application.scss
+++ b/stock-project/app/assets/stylesheets/application.scss
@@ -63,6 +63,12 @@ h1 {
 		border-radius: .5rem;
 	}
 }
+
+.new-sub{
+  float:left;
+  margin-left:40px;
+}
+
 .markets{
 	padding-top: 2em;
 	display: block;
