--- a/stock-project/app/views/users/new.html.erb
+++ b/stock-project/app/views/users/new.html.erb
@@ -10,6 +10,7 @@
   <br/>
   <%= f.password_field :password_confirmation, placeholder: "confirm password" %>
   <br/>
-  <%= f.submit "Sign up" %>
+  <%= f.submit "Sign up" , :class => "clearfix"%>
+  <p><%= notice %></p>
   <% end %>
 </main>
