tweet cloud added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,8 +222,8 @@ input[type='submit']{
   width: 84%;
   margin-left: 16%;
   margin-top: 10%;
+  line-height: 110%;
   li{
-    padding-bottom: 1em;
     display: inline;
   }
 }
