--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
   <%= f.password_field :password_confirmation, placeholder: "confirm password" %>
   <br/>
   <p><%= notice %></p>
-  <%= f.submit "Sign up" , :class => "clearfix"%>
+  <center><%= f.submit "Sign up" , :class => "buttonnew"%></center>
 
   <% end %>
 </main>
