--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,6 +9,6 @@
     <%= f.password_field :password_confirmation, placeholder: "confirm new password" %>
     <br/>
 
-    <%= f.submit "Update password" %>
+    <%= f.submit "Update password", :class => "buttonnew" %>
   <% end %>
 </main>
