--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -26,6 +26,7 @@
 </p>
 
 <table id = "tweets" class = "twitter">
+  <caption>Live Tweets</caption>
   <% @tweets.each do |tweet| %>
   <tr>
     <td><%= tweet.tweet_sender %></td>
