--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -147,6 +147,9 @@ input[type='submit']{
 	cursor: pointer;
 
 }
+.favorited_stocks{
+  text-align:center;
+}
 .gateway {
   form {
     width: 50%;
@@ -183,6 +186,14 @@ input[type='submit']{
   padding-top: 6em;
   li{
     padding-bottom: 1.5em;
+  }
+}
+.favorite_stocks{
+  text-align: center;
+  position: absolute;
+  left: 41%;
+  td{
+    text-align: center;
   }
 }
 .favorited{
