--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="stockname"><%= @stock.name %></h1>
+<h1 class="stockname"><div class="text"><%= @stock.name %></div></h1>
 
 <ul class="stockinfo">
   <li>Last: <%= @stock.last_trade_price %></li>
