--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,21 +44,20 @@ h1 {
 }
 
 .ticker{
-	background:$primary;
-	margin: 0 auto;
-	display: block;
-	width: 40%;
-  height: 60px;
+	
+	
 	text-align: center;
 	padding: 10px;
 	border-radius: 1em;
 	color:white;
 	font-size: 1.5em;
-  position: relative;
+  position: absolute;
+  top: 5%;
+  right: calc(66.66% - 235px);
 	input[type='text']{
-		color:black;
+		color: black;
 		margin-bottom: .5em;
-		width: 4.5em;
+		width: 100%;
 		border-radius: .5rem;
 	}
 	input[type='submit']{
@@ -67,7 +66,14 @@ h1 {
 		border-radius: .5rem;
 	}
 }
-
+.right{
+  background: maroon;
+  position: absolute;
+  right: 0;
+  top: 75px;
+  width: 50%;
+  height: 100%;
+}
 .new-sub{
   float:left;
   margin-left:40px;
@@ -77,7 +83,9 @@ h1 {
 	padding-top: 2em;
 	display: block;
 	margin: 0 auto;
-	width: 85%;
+  position: absolute;
+  left: calc(25% - 205px);
+	width: 205px;
 	li{
     display: inline;
   }
@@ -152,14 +160,18 @@ input[type='submit']{
 }
 
 .stock-input{
-  position: absolute;
-  width: 400px;
-  bottom: 7.5px;
-  left: 50px;
+  
 
 }
+
+.stocksub{
+  position: absolute;
+  right: 33%;
+  color: black;
+}
 .favorited_stocks{
-  text-align:center;
+  color: white;
+  
 }
 .gateway {
   form {
@@ -203,12 +215,29 @@ input[type='submit']{
   }
 }
 .favorite_stocks{
-  text-align: center;
+  /*text-align: center;
   position: absolute;
-  left: 41%;
-  td{
-    text-align: center;
+  left: 41%;*/
+  color: white;
+  a{
+    color: white;
   }
+  a:hover{
+    color: yellow;
+    text-decoration: none;
+    transition:color 2s;
+
+  }
+  td{
+    /*text-align: center;*/
+  }
+}
+
+.Favorited{
+  position: absolute;
+  top: 150px;
+  left: calc(75% - 329px);
+  text-align: center;
 }
 .favorited{
 	background-color: yellow;
