--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -12,22 +12,27 @@ Welcome to your HomePage
 	<input type="text" name="stock"></input>
 	<input type="submit">
 </form> -->
+<div class="right">
 <div class="ticker">
 <%= form_tag "/stocks", class: 'stock-input', method: "POST" do %>
-	Enter A Ticker Symbol:<input type="text" name="ticker"></input>
+	Enter A Ticker Symbol
+	<br>
+	<input type="text" name="ticker"></input>
+	<br>
 	<input class="stocksub" type="submit">
 <% end %>
 </div>
+<div class="Favorited">
 <h3 class="favorited_stocks">My Favorite Stocks</h3>
-<div class="favorite_stocks">
-<table>	
+<table class="favorite_stocks">	
 	<tr><td>Stock Name</td><td>Daily Change In Price</td></tr>
   <% @user.favorites.each do |stock| %>
   <tr>
     <td><%= link_to stock.name, "/stocks/"+(stock.ticker) %></a></td>
-    <td><%= stock.change_in_percent %></a></td>
+    <td class="percent"><%= stock.change_in_percent %></a></td>
   </tr>
   <% end %>
 </table>
+</div>
 </div>
 <ul class='stocks'></ul>
