--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -236,7 +236,7 @@ input[type='submit']{
 .Favorited{
   position: absolute;
   top: 150px;
-  left: calc(75% - 329px);
+  left: 25%;
   text-align: center;
 }
 .favorited{
