--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,17 +54,17 @@ h1 {
   position: absolute;
   top: 5%;
   right: calc(66.66% - 235px);
-	input[type='text']{
-		color: black;
-		margin-bottom: .5em;
-		width: 100%;
-		border-radius: .5rem;
-	}
-	input[type='submit']{
-		text-shadow: 0 1px 2px rgba(0,0,0,0.5);
-		border-bottom: 2px solid grey;
-		border-radius: .5rem;
-	}
+  input[type='text']{
+    color: black;
+    margin-bottom: .5em;
+    width: 100%;
+    border-radius: .5rem;
+  }
+  input[type='submit']{
+    text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    border-bottom: 2px solid grey;
+    border-radius: .5rem;
+  }
 }
 .right{
   background: maroon;
@@ -85,8 +85,8 @@ h1 {
 	margin: 0 auto;
   position: absolute;
   left: calc(25% - 205px);
-	width: 205px;
-	li{
+  width: 205px;
+  li{
     display: inline;
   }
 }
@@ -160,14 +160,30 @@ input[type='submit']{
 }
 
 .stock-input{
-  
+
 
 }
 
 .stocksub{
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  padding: 8px;
+  text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
+  -webkit-border-radius: 29.18918918918919px;
+  -moz-border-radius: 29.18918918918919px;
+  border-radius: 29.18918918918919px;
+  background: rgb(44, 50, 68);
+  background: -moz-linear-gradient(90deg, rgb(44, 50, 68) 30%, rgb(44, 50, 68) 70%);
+  background: -webkit-linear-gradient(90deg, rgb(44, 50, 68) 30%, rgb(44, 50, 68) 70%);
+  background: -o-linear-gradient(90deg, rgb(44, 50, 68) 30%, rgb(44, 50, 68) 70%);
+  background: -ms-linear-gradient(90deg, rgb(44, 50, 68) 30%, rgb(44, 50, 68) 70%);
+  background: linear-gradient(0deg, rgb(44, 50, 68) 30%, rgb(44, 50, 68) 70%);
+  -webkit-box-shadow: 3px 4px 1px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    3px 4px 1px rgba(50, 50, 50, 0.75);
+  box-shadow:         3px 4px 1px rgba(50, 50, 50, 0.75);
   position: absolute;
-  right: 33%;
-  color: black;
+  left: calc(50% - 34px);
+
 }
 .favorited_stocks{
   color: white;
